HEAD only (unreleased)

  New Features

    - CMFDefault: Added experimental Zope 3-style browser views.
      The views are disabled by default. See README.txt of the browser
      sub-package for further information.

    - skins: All page templates now use unicode.
      Please make sure to pass only 'ascii' strings or unicode to them.

    - CMFDefault utils: Added 'decode' function.
      It decodes values using the default_charset of the site.

  Bug Fixes

    - In certain circumstances file-based PythonScripts with foreign line
      endings were not handled correctly. PythonScripts are now read using
      python's universal line-endings support.
      (http://www.zope.org/Collectors/CMF/403)

    - CMFDefault setuphandlers: Disabled password encryption.
      'registeredNotify' and 'mailPassword' don't work with encrypted
      passwords.

    - CMFDefault skins: Fixed clipboard data validation.
      Split off validateClipboardData from folder_paste_control.

    - CMFDefault skins: Refactored and improved discussion_reply_form.

    - CMFDefault utils: Fixed html_marshal function.
      The return values are no longer escaped to avoid double quoting and no
      longer stringified. The page templates take care of these steps.

  Others

    - CMFDefault RegistrationTool and skins: Refactored mail creation.
      'mailPassword' now calls the 'password_email' script and
      'registeredNotify' the 'registered_email' script. These scripts call the
      templates and do the necessary string decoding and encoding.

    - CMFDefault skins: Refactored 'logged_in' page and 'password_form'.
      'logged_in' now redirects to the 'password_form' if a new member has to
      change her password.

    - Replaced deprecated 'manage_afterAdd' and 'manage_beforeDelete' hooks
      in CookieCrumbler with a Z3-style event subscriber which does the
      registration with the container's __before_traverse__.

CMF 2.0.0-alpha (2006/01/22)

  New Features
