@@ -4,6 +4,8 @@ from ZTUtils import make_query
 from Products.CMFCore.utils import getToolByName
 
 utool = getToolByName(script, 'portal_url')
+ptool = getToolByName(script, 'portal_properties')
+default_charset = ptool.getProperty('default_charset', None)
 portal_url = utool()
 
 
@@ -13,7 +15,10 @@ except ValueError:
     target = portal_url
 
 message = context.REQUEST.other.get('portal_status_message', '')
-kw['portal_status_message'] = message
+if message:
+    if isinstance(message, unicode):
+        message = message.encode(default_charset)
+    kw['portal_status_message'] = message
 for k, v in kw.items():
     if not v:
         del kw[k]
