@@ -1,8 +1,9 @@
-## Script (Python) "setStatus"
 ##parameters=success, message='', **kw
-##title=
 ##
+from Products.CMFDefault.utils import translate
+
 if message:
+    message = translate(message, context)
     context.REQUEST.other['portal_status_message'] = message
 if kw:
     for k, v in kw.items():
